--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .container{
     background-color: rgb(255, 255, 255);
-    height: 40em;
-    width: 58em;
+    height: 41em;
+    width: 48em;
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20em;
+    margin-top: 9em;
     border: solid transparent;
     border-radius: 35px;
     
@@ -27,8 +27,9 @@ li{
   }
   .svg{
     position: relative;
-    top: -30em;
+    top: -31em;
     left: 32em;
+    transform: scaleY(1.7);
   }
   .containerEmail{
     /* background-color: black; */
@@ -36,6 +37,14 @@ li{
     top:12em;
     left:2em;
   }
+  /* #username{
+  border: 2px solid rgb(0, 0, 0); 
+
+  } */
+  .userNameBoderCustom{
+    border: 2px solid rgb(199, 14, 14); 
+    }
+
   ul{
     padding: 0;
     position: relative;
@@ -47,7 +56,7 @@ li{
 }
 h1{
   position: relative;
-  bottom:2em;
+  bottom:3em;
   font-family: 'Roboto', sans-serif;
   font-size: 60px;
 }
@@ -58,7 +67,7 @@ h1{
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
 
-  bottom: 7em
+  bottom: 10em
  
 }
 html {
@@ -71,6 +80,7 @@ html {
   top: auto;
   bottom: 6em;
   font-weight: bold;
+  /* display: inline; */
   font-family: 'Roboto', sans-serif;
 }
 input{
@@ -104,6 +114,22 @@ input{
   color: white;
   margin-top: 1em;
 }
+span{
+  
+  font-size: 18px;
+  /* position: relative; */
+  /* top: auto; */
+  /* bottom: 6em; */
+  font-weight: bold;
+  /* display: flex; */
+  /* display: inline-block; */
+  font-family: 'Helvetica', sans-serif;
+  margin-left: 131px;
+  color: red;
+}
+#teste{
+  background-color: aqua !important;
+}
 
 /* Responsividade */
 
@@ -129,8 +155,8 @@ html{
 }
   
     .svg{
-      width: 700px;
-      height: 900px;
+      width: 200px;
+      height: 400px;
       /* height: 100%; */
 
       /* margin: 0; */
@@ -144,7 +170,7 @@ html{
     .containerEmail{
         /* background-color: black; */
     position: relative;
-    top:12em;
+    top:10em;
     left:2em;
     }
     h1{
@@ -153,12 +179,7 @@ html{
       font-family: 'Roboto', sans-serif;
       font-size: 65px;
     }
-    .containerEmail{
-      /* background-color: black; */
-      position: relative;
-      top:45em;
-      left:1em;
-    }
+    
     ul{
       padding: 0;
       position: relative;
